

Enemies and Bosses:

-Buffed rot gourd max hp from 2200 to 2700
-Changed daffodils "hide under the platform" telegraphs to green instead of yellow to prevent confusion between her 2 different telegraphs
-Observing orchids will now only attack if they have light of sight with the player


Miscellaneous:

-Made the spider grotto biome size a tiny bit smaller
-Carved gourd-o-lanterns now count as light source blocks for npc housing
-Added tile wind swaying for many spooky mod tiles such as hanging ambient tiles, vines, ect, since tmodloader has finally added support for that
-Spooky mod grasses now immediately turn into their corresponding dirt block when broken like terraria grasses do
-New resprites for all spooky mod grasses and most spooky mod dirt blocks to make them look more terraria styled
-Catacombs curse debuff no longer prevents you from placing blocks
-Catacomb bricks and walls can now be broken with pickaxes/hammers once the respective boss at the bottom of that layer has been defeated (daffodil for layer 1 bricks, big bone for layer 2 bricks) (HOWEVER, the actual boss arenas and pandora's box arena are still completely indestructable. This also only applies to new worlds, in old worlds the arenas are not made out of the new unbreakable block)
-Removed catacomb grass seeds, cemetery grass seeds now serve the same purpose of placing moss on catacomb bricks along with placing cemetery grass
-Removed all cooldown debuffs for accessories that have had their cooldowns removed




~BUGS AND OTHER FIXES~

-Fixed spooky mod helmets/masks with custom drawing (such as glowmasks and extended helmets) drawing incorrectly when gravity is flipped
-Fixed bug with many spooky mod objects (such as custom trees, giant glowshrooms, spider grotto old hunter piles, bloom plants, ect) not being in the correct positions when using snapshot mode to take screenshots